resources/echo-headers-tls/echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: echo.shanelee.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
