resources/echo-headers-tls/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/configuration-snippet: |
     more_set_headers "Request-Id: $request_id";
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
   - hosts:
     - echo-tls.shanelee.xyz
     secretName: echoserver-tls
  rules:
  - host: echo-tls.shanelee.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
